--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
-title: Personal Projects Programmed Purposefully
+title: Resume/Portfolio Site
 author: Sean Cleveland
 email: 30681614+marlfoxlegend@users.noreply.github.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My personal website to display my project portfolio
+  and my resume for potential employers.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+# twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  marlfoxlegend # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
 theme: minima
